--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,33 @@
 
     </head>
     <body>
-
+    
+        <h1>Samoloty</h1>
+    
+        <nav>
+        <ul>
+            
+            <!-- A -->
+            
+            
+            <!-- B -->
+            
+            
+            <!-- C -->
+            
+            
+            <!-- D -->
+            
+            
+            <!-- E -->
+            
+            
+            <!-- F -->
+            
+        
+        </ul>
+        </nav>    
+        
     {% block body %}{% endblock %}
 
     <footer>Version: 0.0.0</footer>
