--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,7 +20,9 @@
         <ul>
             
             <!-- A -->
-            
+            <li>
+            <a href="{{ path('mirage') }}">Mirage</a>
+            </li>
             
             <!-- B -->
             
