Samoloty - Panavia Tornado

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,7 +28,9 @@
             
             
             <!-- C -->
-            
+            <li>
+            <a href="{{ path('panavia') }}">Panavia</a>
+            </li>
             
             <!-- D -->
             
