--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,6 +23,9 @@
             <li>
             <a href="{{ path('mirage') }}">Mirage</a>
             </li>
+            <li>
+            <a href="{{ path('lincoln') }}">Lincoln</a>
+            </li>
             
             <!-- B -->
             
