--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,9 @@
             <li>
             <a href="{{ path('panavia') }}">Panavia</a>
             </li>
-            
+            <li>
+            <a href="{{ path('eurofighter') }}">Eurofighter</a>
+            </li>
             <!-- D -->
             
             
