--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,7 +38,9 @@
             <a href="{{ path('eurofighter') }}">Eurofighter</a>
             </li>
             <!-- D -->
-            
+            <li>
+            <a href="{{ path('dromader') }}">PZL M18 Dromader</a>
+            </li>
             
             <!-- E -->
             
