--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,6 +41,9 @@
             <li>
             <a href="{{ path('dromader') }}">PZL M18 Dromader</a>
             </li>
+            <li>
+            <a href="{{ path('douglas') }}">Douglas A-1 Skyraider</a>
+            </li>
             
             <!-- E -->
             
