--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,12 @@
             </li>
             
             <!-- E -->
-            
+            <li>
+            <a href="{{ path('A320') }}">Airbus A320</a>
+            </li>
+            <li>
+            <a href="{{ path('boeing737') }}">Boeing 737</a>
+            </li>
             
             <!-- F -->
             
