--- a/app/Resources/views/default/a320.html.twig
+++ b/app/Resources/views/default/a320.html.twig
@@ -1,43 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-        <h1>Douglas A-1 Skyraider</h1>
+        <h1>Airbus A320</h1>
     <pre>
         <br/>
         <h2>Wygląd</h2>
-        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Skyraider_AD-4N.jpg/240px-Skyraider_AD-4N.jpg" alt="Douglas" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/VQ-BKU%40LHR_18AUG12_%288621590880%29.jpg/300px-VQ-BKU%40LHR_18AUG12_%288621590880%29.jpg" alt="Airbus" />
         <br/>
         <br/>
-        <h2>Opis konstrukcji</h2>
+        <h2>Opis</h2>
         <p>
-        Całkowicie metalowy dolnopłat konstrukcji skorupowej. Skrzydła proste, trapezowe, składające się z trzech sekcji: centropłata i dwóch części zewnętrznych, składanych hydraulicznie do hangarowania, do góry. 
-        Usterzenie klasyczne pojedyncze (w wersjach W, z dwoma małymi dodatkowymi statecznikami pionowymi na stateczniku poziomym). Z przodu kadłuba silnik gwiazdowy napędzający śmigło ciągnące o średnicy 4100 mm. Za nim w środkowej sekcji kabina pilota, blisko nosa samolotu, nakryta kroplową osłoną, odsuwaną do tyłu, ze stałym wiatrochronem z przednią szybą pancerną. 
-        Tuż za miejscem pilota był kadłubowy zbiornik paliwa. W długiej ogonowej części kadłuba, za kabiną pilota i zbiornikiem znajdowała się w wersjach specjalnych (Q, N, W) kabina operatora lub operatorów radaru, z niewielkimi iluminatorami po bokach i drzwiczkami w prawej (wersje Q) lub obu burtach (wersje N, W). 
-        W wersji AD-5, dwu- lub czteroosobowa załoga w długiej kabinie pod wspólną przeszkloną wieloczęściową osłoną. W większości wersji po bokach i na spodzie kadłuba, za skrzydłem, hamulce aerodynamiczne w postaci otwieranych hydraulicznie klap (dolny hamulec we wszystkich wersjach). 
-        Podwozie samolotu klasyczne, chowane, z kółkiem ogonowym; podwozie główne chowane do tyłu do skrzydeł po obrocie o 90°. Hak do lądowania pod usterzeniem.
-        Paliwo znajdowało się w zbiorniku kadłubowym pojemności 1135 l i dwóch w centropłacie po 568 l. Można było przenosić trzy dodatkowe podwieszane zbiorniki paliwa po 1438 l. Istniała możliwość awaryjnego zrzutu paliwa.
-        Uzbrojenie stałe stanowiły 2 lub 4 działka M2 kalibru 20 mm w skrzydłach. Uzbrojenie podwieszane w postaci bomb, niekierowanych pocisków rakietowych (pojedynczych i w wieloprowadnicowych wyrzutniach), torped, zasobników strzeleckich, zasobników zapalających itp. można było przenosić na 15 węzłach podwieszenia. 
-        Trzy węzły były główne - jeden pod kadłubem i 2 pod centropłatem, a 12 pod zewnętrznymi częściami skrzydeł, o mniejszym udźwigu. Maksymalnie można było przenosić 3 bomby o masie 908 kg oraz kilka mniejszego wagomiaru. Maksymalna masa uzbrojenia: 4500 kg dla operowania z lotnisk, 2970 kg dla operowania z lotniskowców. 
-        Niektóre wersje przenosiły radar AN/APS-4 w podwieszanym zasobniku (głównie Q i N).
-        </ul>
-        </p>
-
-        <h2>Historia</h2>
-        <p>
-        Historię Skyraidera rozpoczął ogłoszony pod koniec II wojny światowej przez lotnictwo amerykańskiej marynarki wojennej (US Navy), konkurs na jednosilnikowy samolot nowej, uniwersalnej klasy: samolot torpedowy - bombowiec nurkujący, oznaczonej BT (bomber-torpedo). 
-        W firmie Douglas Aircraft Company zaprojektowano wówczas samolot XBTD-1. W konkursie zwyciężyły dwie konstrukcje: XBTD-1 Douglasa i Martin XBTM-1, wyprodukowany następnie w niewielkiej serii jako Martin AM-1 Mauler. 
-        Lotnictwo marynarki zamówiło początkowo 623 samoloty Douglasa pod oznaczeniem BTD-1, po czym w lipcu 1944 ostatecznie z nich zrezygnowało.
-        Prototyp XBT2D-1
-        Zespół Douglasa, którego głównym projektantem był Ed Heinemann, zaprojektował wówczas nowy samolot, o uproszczonej konstrukcji, oznaczony XBT2D-1. 
-        Marynarka wyraziła zainteresowanie nowym projektem, zamawiając próbną serię 15 maszyn, zwiększoną następnie do 25 egzemplarzy XBT2D-1, i zlecając dalszy rozwój. Samolot otrzymał początkowo nazwę Dauntless II, nawiązującą do udanego bombowca Douglas SBD Dauntless. 
-        Pierwszy prototyp został oblatany 18 marca 1945, wykazując bardzo dobre własności lotne. Był on wówczas największym jednosilnikowym samolotem świata. Napęd pierwszych czterech samolotów stanowił silnik gwiazdowy Wright R-3350-8 o mocy startowej 2300 KM, następnych R-3350-24W o mocy 2500 KM. 
-        Cechą szczególną było wyposażenie samolotów aż w 15 węzłów do podwieszania uzbrojenia. Uzbrojenie stanowiły ponadto 2 działka 20 mm. Sześć samolotów serii próbnej przebudowano na prototypy wersji specjalistycznych, ukazując duży potencjał konstrukcji samolotu. 
-        Marynarka początkowo chciała zakupić 548 egzemplarzy, lecz w związku z zakończeniem wojny liczba ta została zredukowana do 277.
-        W lutym 1946 samolot przemianowano na Skyraider, a w kwietniu - w związku z rezygnacją z wyróżniania klasy samolotów BT - zmieniono jego oznaczenie na AD (oznaczające pierwszy model samolotu szturmowego - klasy Attack, firmy Douglas). 
-        Wiosną 1946 samoloty serii próbnej na pokładzie lotniskowca przeszły badania, które wykazały konieczność wzmocnienia konstrukcji, zwłaszcza podwozia i usterzenia. Po wprowadzeniu zmian samolot skierowano do produkcji.
-        </p>
-        
-
+        The Airbus A320 family consists of short- to medium-range, narrow-body, commercial passenger twin-engine jet airliners manufactured by Airbus. The family includes the A318, A319, A320 and A321, as well as the ACJ business jet. The A320s are also named A320ceo (current engine option) after the introduction of the A320neo. Final assembly of the family in Europe takes place in Toulouse, France, and Hamburg, Germany. Starting in 2009, a plant in Tianjin, China, has also been producing aircraft for Chinese airlines. In April 2013, Airbus started construction of a new production facility for the A319, A320, and A321 variants in Mobile, Alabama. The aircraft family can accommodate up to 220 passengers and has a range of 3,100 to 12,000 km (1,700 to 6,500 nmi), depending on model.
+The first member of the A320 family—the A320—was launched in March 1984, first flew on 22 February 1987, and was first delivered in March 1988. The family was soon extended to include the A321 (first delivered 1994), the A319 (1996), and the A318 (2003). The A320 family pioneered the use of digital fly-by-wire flight control systems, as well as side-stick controls, in commercial aircraft. There has been a continuous improvement process since introduction.
+In December 2010, Airbus announced a new generation of the A320 family, the A320neo "New Engine Option". The A320neo offers a choice of CFM International LEAP-X or Pratt & Whitney PW1000G engines, combined with airframe improvements and the addition of winglets, named Sharklets by Airbus. The aircraft will deliver fuel savings of up to 15%. The first A320neo will enter service with Virgin America in 2016. As of December 2011, a total of 1,196 A320neo family aircraft have been ordered by 21 airlines, making it the fastest ever selling commercial aircraft.
+As of 31 January 2015, a total of 6,415 Airbus A320 family aircraft have been delivered, of which 6,157 are in service. In addition, another 5,099 airliners are on firm order. It ranked as the world's fastest-selling jet airliner family according to records from 2005 to 2007, and as the best-selling single-generation aircraft programme. The A320 family has proved popular with airlines including low-cost carriers such as EasyJet which purchased A319s, and A320s, to replace its Boeing 737 fleet. The aircraft family competes directly with the Boeing 737 and has competed with the 717, 757, and the McDonnell Douglas MD-80/MD-90.
+        </p> 
     </pre>
 {% endblock %}
 
