--- a/app/Resources/views/default/boeing737.html.twig
+++ b/app/Resources/views/default/boeing737.html.twig
@@ -1,43 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-        <h1>Douglas A-1 Skyraider</h1>
+        <h1>Boeing 737</h1>
     <pre>
         <br/>
         <h2>Wygląd</h2>
-        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Skyraider_AD-4N.jpg/240px-Skyraider_AD-4N.jpg" alt="Douglas" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Turkmenistan_Airlines_Boeing_737-300_Karpezo-1.jpg/800px-Turkmenistan_Airlines_Boeing_737-300_Karpezo-1.jpg" alt="Boeing" />
         <br/>
         <br/>
-        <h2>Opis konstrukcji</h2>
+        <h2>Opis</h2>
         <p>
-        Całkowicie metalowy dolnopłat konstrukcji skorupowej. Skrzydła proste, trapezowe, składające się z trzech sekcji: centropłata i dwóch części zewnętrznych, składanych hydraulicznie do hangarowania, do góry. 
-        Usterzenie klasyczne pojedyncze (w wersjach W, z dwoma małymi dodatkowymi statecznikami pionowymi na stateczniku poziomym). Z przodu kadłuba silnik gwiazdowy napędzający śmigło ciągnące o średnicy 4100 mm. Za nim w środkowej sekcji kabina pilota, blisko nosa samolotu, nakryta kroplową osłoną, odsuwaną do tyłu, ze stałym wiatrochronem z przednią szybą pancerną. 
-        Tuż za miejscem pilota był kadłubowy zbiornik paliwa. W długiej ogonowej części kadłuba, za kabiną pilota i zbiornikiem znajdowała się w wersjach specjalnych (Q, N, W) kabina operatora lub operatorów radaru, z niewielkimi iluminatorami po bokach i drzwiczkami w prawej (wersje Q) lub obu burtach (wersje N, W). 
-        W wersji AD-5, dwu- lub czteroosobowa załoga w długiej kabinie pod wspólną przeszkloną wieloczęściową osłoną. W większości wersji po bokach i na spodzie kadłuba, za skrzydłem, hamulce aerodynamiczne w postaci otwieranych hydraulicznie klap (dolny hamulec we wszystkich wersjach). 
-        Podwozie samolotu klasyczne, chowane, z kółkiem ogonowym; podwozie główne chowane do tyłu do skrzydeł po obrocie o 90°. Hak do lądowania pod usterzeniem.
-        Paliwo znajdowało się w zbiorniku kadłubowym pojemności 1135 l i dwóch w centropłacie po 568 l. Można było przenosić trzy dodatkowe podwieszane zbiorniki paliwa po 1438 l. Istniała możliwość awaryjnego zrzutu paliwa.
-        Uzbrojenie stałe stanowiły 2 lub 4 działka M2 kalibru 20 mm w skrzydłach. Uzbrojenie podwieszane w postaci bomb, niekierowanych pocisków rakietowych (pojedynczych i w wieloprowadnicowych wyrzutniach), torped, zasobników strzeleckich, zasobników zapalających itp. można było przenosić na 15 węzłach podwieszenia. 
-        Trzy węzły były główne - jeden pod kadłubem i 2 pod centropłatem, a 12 pod zewnętrznymi częściami skrzydeł, o mniejszym udźwigu. Maksymalnie można było przenosić 3 bomby o masie 908 kg oraz kilka mniejszego wagomiaru. Maksymalna masa uzbrojenia: 4500 kg dla operowania z lotnisk, 2970 kg dla operowania z lotniskowców. 
-        Niektóre wersje przenosiły radar AN/APS-4 w podwieszanym zasobniku (głównie Q i N).
-        </ul>
-        </p>
-
-        <h2>Historia</h2>
-        <p>
-        Historię Skyraidera rozpoczął ogłoszony pod koniec II wojny światowej przez lotnictwo amerykańskiej marynarki wojennej (US Navy), konkurs na jednosilnikowy samolot nowej, uniwersalnej klasy: samolot torpedowy - bombowiec nurkujący, oznaczonej BT (bomber-torpedo). 
-        W firmie Douglas Aircraft Company zaprojektowano wówczas samolot XBTD-1. W konkursie zwyciężyły dwie konstrukcje: XBTD-1 Douglasa i Martin XBTM-1, wyprodukowany następnie w niewielkiej serii jako Martin AM-1 Mauler. 
-        Lotnictwo marynarki zamówiło początkowo 623 samoloty Douglasa pod oznaczeniem BTD-1, po czym w lipcu 1944 ostatecznie z nich zrezygnowało.
-        Prototyp XBT2D-1
-        Zespół Douglasa, którego głównym projektantem był Ed Heinemann, zaprojektował wówczas nowy samolot, o uproszczonej konstrukcji, oznaczony XBT2D-1. 
-        Marynarka wyraziła zainteresowanie nowym projektem, zamawiając próbną serię 15 maszyn, zwiększoną następnie do 25 egzemplarzy XBT2D-1, i zlecając dalszy rozwój. Samolot otrzymał początkowo nazwę Dauntless II, nawiązującą do udanego bombowca Douglas SBD Dauntless. 
-        Pierwszy prototyp został oblatany 18 marca 1945, wykazując bardzo dobre własności lotne. Był on wówczas największym jednosilnikowym samolotem świata. Napęd pierwszych czterech samolotów stanowił silnik gwiazdowy Wright R-3350-8 o mocy startowej 2300 KM, następnych R-3350-24W o mocy 2500 KM. 
-        Cechą szczególną było wyposażenie samolotów aż w 15 węzłów do podwieszania uzbrojenia. Uzbrojenie stanowiły ponadto 2 działka 20 mm. Sześć samolotów serii próbnej przebudowano na prototypy wersji specjalistycznych, ukazując duży potencjał konstrukcji samolotu. 
-        Marynarka początkowo chciała zakupić 548 egzemplarzy, lecz w związku z zakończeniem wojny liczba ta została zredukowana do 277.
-        W lutym 1946 samolot przemianowano na Skyraider, a w kwietniu - w związku z rezygnacją z wyróżniania klasy samolotów BT - zmieniono jego oznaczenie na AD (oznaczające pierwszy model samolotu szturmowego - klasy Attack, firmy Douglas). 
-        Wiosną 1946 samoloty serii próbnej na pokładzie lotniskowca przeszły badania, które wykazały konieczność wzmocnienia konstrukcji, zwłaszcza podwozia i usterzenia. Po wprowadzeniu zmian samolot skierowano do produkcji.
-        </p>
-        
-
+        The Boeing 737 is a short- to medium-range twinjet narrow-body airliner. Originally developed as a shorter, lower-cost twin-engined airliner derived from Boeing's 707 and 727, the 737 has developed into a family of nine passenger models with a capacity of 85 to 215 passengers. The 737 is Boeing's only narrow-body airliner in production, with the -700, -800, and -900ER variants currently being built. A re-engined and redesigned version, the 737 MAX, is set to debut in 2017.
+Originally envisioned in 1964, the initial 737-100 made its first flight in April 1967 and entered airline service in February 1968 at Lufthansa. Next, the lengthened 737-200 entered service in April 1968. In the 1980s Boeing launched the -300, -400, and -500 models, subsequently referred to as the Boeing 737 Classic series. The 737 Classics added capacity and incorporated CFM56 turbofan engines along with wing improvements. In the 1990s Boeing introduced the 737 Next Generation with multiple changes including a redesigned wing, upgraded cockpit, and new interior. The 737 Next Generation comprises the four -600, -700, -800, and -900ER models, ranging from 102 ft (31.09 m) to 138 ft (42.06 m) in length. Boeing Business Jet versions of the 737 Next Generation are also produced.
+The 737 series is the best-selling jet airliner in the history of aviation. The 737 has been continuously manufactured by Boeing since 1967 with 8,263 aircraft delivered and 4,037 orders yet to be fulfilled as of October 2014. 737 assembly is centered at the Boeing Renton Factory in Renton, Washington. Many 737s serve markets previously filled by 707, 727, 757, DC-9, and MD-80/MD-90 airliners, and the aircraft currently competes primarily with the Airbus A320 family. There are 1,250 Boeing 737s airborne at any given time on average, with two departing or landing somewhere every five seconds as of 2006.
+        </p> 
     </pre>
 {% endblock %}
 
