--- a/app/Resources/views/default/a320.html.twig
+++ b/app/Resources/views/default/a320.html.twig
@@ -2,19 +2,27 @@
 
 {% block body %}
         <h1>Airbus A320</h1>
-    <pre>
         <br/>
         <h2>Wygląd</h2>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/VQ-BKU%40LHR_18AUG12_%288621590880%29.jpg/300px-VQ-BKU%40LHR_18AUG12_%288621590880%29.jpg" alt="Airbus" />
         <br/>
         <br/>
         <h2>Opis</h2>
-        <p>
+        <p><pre>
         The Airbus A320 family consists of short- to medium-range, narrow-body, commercial passenger twin-engine jet airliners manufactured by Airbus. The family includes the A318, A319, A320 and A321, as well as the ACJ business jet. The A320s are also named A320ceo (current engine option) after the introduction of the A320neo. Final assembly of the family in Europe takes place in Toulouse, France, and Hamburg, Germany. Starting in 2009, a plant in Tianjin, China, has also been producing aircraft for Chinese airlines. In April 2013, Airbus started construction of a new production facility for the A319, A320, and A321 variants in Mobile, Alabama. The aircraft family can accommodate up to 220 passengers and has a range of 3,100 to 12,000 km (1,700 to 6,500 nmi), depending on model.
 The first member of the A320 family—the A320—was launched in March 1984, first flew on 22 February 1987, and was first delivered in March 1988. The family was soon extended to include the A321 (first delivered 1994), the A319 (1996), and the A318 (2003). The A320 family pioneered the use of digital fly-by-wire flight control systems, as well as side-stick controls, in commercial aircraft. There has been a continuous improvement process since introduction.
 In December 2010, Airbus announced a new generation of the A320 family, the A320neo "New Engine Option". The A320neo offers a choice of CFM International LEAP-X or Pratt & Whitney PW1000G engines, combined with airframe improvements and the addition of winglets, named Sharklets by Airbus. The aircraft will deliver fuel savings of up to 15%. The first A320neo will enter service with Virgin America in 2016. As of December 2011, a total of 1,196 A320neo family aircraft have been ordered by 21 airlines, making it the fastest ever selling commercial aircraft.
 As of 31 January 2015, a total of 6,415 Airbus A320 family aircraft have been delivered, of which 6,157 are in service. In addition, another 5,099 airliners are on firm order. It ranked as the world's fastest-selling jet airliner family according to records from 2005 to 2007, and as the best-selling single-generation aircraft programme. The A320 family has proved popular with airlines including low-cost carriers such as EasyJet which purchased A319s, and A320s, to replace its Boeing 737 fleet. The aircraft family competes directly with the Boeing 737 and has competed with the 717, 757, and the McDonnell Douglas MD-80/MD-90.
-        </p> 
-    </pre>
+        </pre></p> 
+
+        <h2>Origins</h2>
+        <p><pre>
+        When Airbus designed the Airbus A300 during the late 1960s and early 1970s, it envisaged a broad family of airliners with which to compete against Boeing and Douglas, two established US aerospace manufacturers. From the moment of formation, Airbus had begun studies into derivatives of the Airbus A300B in support of this long-term goal. Prior to the service introduction of the first Airbus airliners, engineers within Airbus had identified nine possible variations of the A300 known as A300B1 to B9. A 10th variation, conceived in 1973, later the first to be constructed, was designated the A300B10. It was a smaller aircraft which would be developed into the long-range Airbus A310. Airbus then focused its efforts on the single-aisle market, which was dominated by the Boeing 737 and McDonnell Douglas DC-9.
+
+Air Inter A320-100 in 1991, one of the few A320-100s
+Plans from a number of European aircraft manufacturers called for a successor to the relatively successful BAC One-Eleven, and to replace the Boeing 737-200 and DC-9. Germany's MBB (Messerschmitt-Bölkow-Blohm), British Aircraft Corporation, Sweden's Saab and Spain's CASA worked on the EUROPLANE, a 180- to 200-seat aircraft. It was abandoned after intruding on A310 specifications.[17] VFW-Fokker, Dornier and Hawker Siddeley worked on a number of 150-seat designs.
+Alongside BAe (which at the time was not part of Airbus) were MBB, Fokker-VFW and Aérospatiale. The design within the JET study that was carried forward was the JET2 (163 passengers), which then became the Airbus S.A1/2/3 series (Single Aisle), before settling on the A320 name for its launch in 1984.
+The Hawker Siddeley team had previously produced a design called the HS.134 "Airbus" in 1965, an evolution of the HS.121 (formerly DH.121) Trident, which shared much of the general arrangement of the later JET3 study design. The name "Airbus" at the time referred to a BEA requirement, rather than to the later international programme.
+        </pre></p>
 {% endblock %}
 
