--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,7 +54,9 @@
             </li>
             
             <!-- F -->
-            
+            <li>
+                <a href="{{path('PZL_37') }}">PZL 37 Łoś</a>
+            </li>
         
         </ul>
         </nav>    
